# gmlib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py  gmlib-config.cmake.in  test.cpp
Include/: BSplineBasis.h  OpenGLShader.hpp  WindowBaseClass.h  myWindowClass.h
example/: BSplineBasis.cpp  BSplineBasisShow.cpp  CMakeLists.txt
example/src/: myWindowClass.cpp
include/: KnotVector.h
src/: WindowBaseClass.cpp
tests/: CMakeLists.txt  test.cpp
